# VTK_uni_converter

./: .gitignore  CMakeLists.txt  readme.md
docs/converter/: custom.md  surfer6_grd.md
docs/grid/: structured_grid.md  unstructured_grid.md
examples/: Config.json
src/: ConfigReader.h  main.cpp
src/include/adapter/: AdapterBase.h  IAdapter.h  StructuredGridAdapter.h  UnstructuredGridAdapter.h
src/include/converter/: ConverterBase.h  CustomConverter.h  GrdConverter.h  IConverter.h
src/include/enum/: enum_target.h  enum_type.h
src/include/exception/: HeaderException.h
src/include/factory/: AbstractFactory.h  AdapterFactory.h  ConverterFactory.h  ReaderFactory.h
src/include/fileHeader/: FileHeader.h  GrdFileHeader.h  UserFileHeader.h
src/include/reader/: IReader.h  ReaderBase.h  SequenceReader.h  SingleReader.h  StepReader.h
